# multi-agent-config

./: .gitignore  .gitleaks.toml  CHANGELOG.md  Cargo.toml  LICENSE  MULTI_AGENT_TOOL_REQUIREMENTS.md  README.md  deny.toml  hooks.toml  install.sh  justfile  rustfmt.toml
.claude/: settings.local.json
.github/: dependabot.yml
.github/workflows/: ci.yml  deps.yml  release.yml
architecture/: 01-executive-summary.md  02-problem-statement.md  03-system-overview.md  04-input-specifications.md  05-output-specifications.md  06-invariants.md  07-transformation-rules.md  08-failure-modes.md  09-edge-cases.md  10-security-requirements.md  11-operational-requirements.md  12-configuration-schema-reference.md  13-error-handling-specifications.md  14-testing-requirements.md  15-future-extensibility.md  16-appendices.md  overview.md
docs/plans/implementation/: overview.md  phase_1.md  phase_2.md  phase_3.md  phase_4.md  phase_5.md  phase_6.md
examples/: config.toml
scripts/: release.sh
src/: doctor.rs  error.rs  lib.rs  main.rs  update.rs
src/cli/: mod.rs  output.rs
src/cli/commands/: compile.rs  diff.rs  init.rs  mod.rs  validate.rs
src/config/: mod.rs  parser.rs  types.rs  validator.rs
src/expand/: expander.rs  mod.rs
src/file_ops/: backup.rs  diff.rs  mod.rs  state.rs  writer.rs
src/transform/: claude_code.rs  codex.rs  cursor.rs  filter.rs  mod.rs  opencode.rs
tests/: integration_test.rs
