[package]
name = "multi-agent-config"
version = "0.1.1"
edition = "2021"
rust-version = "1.85.0"
authors = ["James Felix Black <jfb@workhelix.com>"]
description = "A multi-agent configuration and orchestration tool"
license = "MIT"
repository = "https://github.com/jfb/multi-agent-config"
keywords = ["cli", "tool", "rust"]
categories = ["command-line-utilities", "development-tools"]

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[lints.clippy]
# Deny common issues
enum_glob_use = "deny"
wildcard_imports = "deny"

# Allow only unavoidable Windows ecosystem duplicates
multiple_crate_versions = "allow" # Windows ecosystem unavoidable duplicates

# Quality checks - maximum aggression
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

[dependencies]
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
colored = "2.1"
indicatif = "0.17"
reqwest = { version = "0.12", features = ["blocking", "json"] }
hex = "0.4"
sha2 = "0.10"
tempfile = "3.0"

[dev-dependencies]