[package]
name = "multi-agent-config"
version = "0.1.8"
edition = "2021"
rust-version = "1.85.0"
authors = ["James Felix Black <jfb@workhelix.com>"]
description = "A multi-agent configuration and orchestration tool"
license = "MIT"
repository = "https://github.com/tftio/multi-agent-config"
keywords = ["cli", "tool", "rust"]
categories = ["command-line-utilities", "development-tools"]

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[lints.clippy]
# Deny common issues
enum_glob_use = "deny"
wildcard_imports = "deny"

# Allow only unavoidable Windows ecosystem duplicates
multiple_crate_versions = "allow" # Windows ecosystem unavoidable duplicates

# Quality checks - maximum aggression
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

[dependencies]
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
regex = "1.11"
which = "7.0"
similar = "2.6"
colored = "2.1"
indicatif = "0.17"
is-terminal = "0.4"
dirs = "5.0"
sha2 = "0.10"
tempfile = "3.0"
workhelix-cli-common = "0.1.3"

[dev-dependencies]